src/objects/Waiver__c.object
<CustomObject>
    <fields>
        <fullName>CNCS_Approved_Date__c</fullName>
        <label>CNCS Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CNCS_Justification__c</fullName>
        <label>CNCS Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grantee_Justification__c</fullName>
        <label>Grantee Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Minimum_Required_Match__c</fullName>
        <label>Minimum Required Match %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Project__r.Organization__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Project Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project ID</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Waivers</relationshipLabel>
        <relationshipName>Waivers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>AmeriCorps Alternative Match Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Leveraging Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Administrative Alternative Match Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severely Distressed Communities Match Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-grants Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiver_Status__c</fullName>
        <description>#1050</description>
        <label>Waiver Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Waiver</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Waiver ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Minimum_Required_Match</fullName>
        <active>true</active>
        <description>Minimum Required Match % required for all request types except AmeriCorps Alternative Match Schedule.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(Request_Type__c,&quot;Volunteer Leveraging Waiver&quot;),
ISPICKVAL(Request_Type__c,&quot;Commission Administrative Alternative Match Schedule&quot;),
ISPICKVAL(Request_Type__c, &quot;Severely Distressed Communities Match Waiver&quot;),
ISPICKVAL(Request_Type__c, &quot;Sub-grants Waiver&quot;),
ISPICKVAL(Request_Type__c, &quot;Other&quot;)
),
ISBLANK( Minimum_Required_Match__c )
)</errorConditionFormula>
        <errorDisplayField>Minimum_Required_Match__c</errorDisplayField>
        <errorMessage>The &quot;Minimum Required Match %&quot; must be entered for the selected request type.</errorMessage>
    </validationRules>
</CustomObject>